INT-12114: Fixed text alignment and checkbox padding for the safeassign disclosure on the edit submission page.

--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,7 @@
 #page-admin-plagiarism-safeassign-settings .modal-footer {
     display: none;
 }
+
+#page-mod-assign-editsubmission input[type=checkbox] {
+    margin-right: .25rem;
+}
